--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <div class="box-title">
                 <span class="title">London</span>
             </div>
-        </div><!--London-->
+        </div><!--Erllan corno -->
 
         <section class="contents">
-            <h3>Lorem ipsum</h3>
+            <h3>L</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime expedita recusandae pariatur molestias perferendis tempore nihil aut rerum, deserunt itaque earum et explicabo iste impedit obcaecati eligendi, praesentium libero laborum!</p><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime expedita recusandae pariatur molestias perferendis tempore nihil aut rerum, deserunt itaque earum et explicabo iste impedit obcaecati eligendi, praesentium libero laborum!</p>
         </section>
         
